// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getDependenciesGraph > should make graph for async services implementations 1`] = `
[
  {
    "id": "uuid-1",
    "lifetime": 0,
    "name": "AppImpl (App)",
  },
  {
    "id": "uuid-2",
    "lifetime": 0,
    "name": "DatabaseConnectionImpl (DatabaseConnection)",
  },
  {
    "id": "uuid-4",
    "lifetime": 2,
    "name": "DatabaseImpl (Database)",
  },
  {
    "id": "uuid-7",
    "lifetime": 2,
    "name": "DBArticlesImpl (DBArticles)",
  },
  {
    "id": "uuid-8",
    "lifetime": 2,
    "name": "DBCommentsImpl (DBComments)",
  },
  {
    "id": "uuid-6",
    "lifetime": 2,
    "name": "DBUsersImpl (DBUsers)",
  },
  {
    "id": "uuid-3",
    "lifetime": 0,
    "name": "GQLServerImpl (GQLServer)",
  },
  {
    "id": "uuid-0",
    "lifetime": 2,
    "name": "IServiceProvider",
  },
  {
    "id": "uuid-10",
    "lifetime": 1,
    "name": "ProfileImpl (Profile)",
  },
  {
    "id": "uuid-9",
    "lifetime": 1,
    "name": "RequestImpl (Request)",
  },
  {
    "id": "uuid-11",
    "lifetime": 1,
    "name": "SessionImpl (Session)",
  },
  {
    "id": "uuid-5",
    "lifetime": 2,
    "name": "SessionStoreImpl (SessionStore)",
  },
]
`;

exports[`getDependenciesGraph > should make graph for async services implementations 2`] = `[]`;

exports[`getDependenciesGraph > should make graph for sync services implementations 1`] = `
[
  {
    "id": "uuid-1",
    "lifetime": 0,
    "name": "App",
  },
  {
    "id": "uuid-4",
    "lifetime": 2,
    "name": "Database",
  },
  {
    "id": "uuid-2",
    "lifetime": 0,
    "name": "DatabaseConnection",
  },
  {
    "id": "uuid-7",
    "lifetime": 2,
    "name": "DBArticles",
  },
  {
    "id": "uuid-8",
    "lifetime": 2,
    "name": "DBComments",
  },
  {
    "id": "uuid-6",
    "lifetime": 2,
    "name": "DBUsers",
  },
  {
    "id": "uuid-3",
    "lifetime": 0,
    "name": "GQLServer",
  },
  {
    "id": "uuid-0",
    "lifetime": 2,
    "name": "IServiceProvider",
  },
  {
    "id": "uuid-10",
    "lifetime": 1,
    "name": "Profile",
  },
  {
    "id": "uuid-9",
    "lifetime": 1,
    "name": "Request",
  },
  {
    "id": "uuid-11",
    "lifetime": 1,
    "name": "Session",
  },
  {
    "id": "uuid-5",
    "lifetime": 2,
    "name": "SessionStore",
  },
]
`;

exports[`getDependenciesGraph > should make graph for sync services implementations 2`] = `[]`;
